--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development --content-base ./public"
+    "dev": "webpack serve --mode development --content-base ./public",
+    "start": "npm run build && node server.js"
   },
   "devDependencies": {
     "clean-webpack-plugin": "3.0.0",
@@ -16,6 +17,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "css-loader": "^5.2.0",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
