--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development --content-base ./public",
-    "start": "npm run build && node server.js"
+    "start": "npm run build && node server"
   },
   "devDependencies": {
     "clean-webpack-plugin": "3.0.0",
