--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "devDependencies": {
     "clean-webpack-plugin": "3.0.0",
     "html-webpack-plugin": "5.3.0",
-    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
@@ -22,6 +21,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
-    "webpack": "5.24.4"
+    "webpack": "5.24.4",
+    "webpack-cli": "^4.5.0"
   }
 }
