--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.2",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^5.2.0",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "5.3.0",
     "react": "^17.0.1",
